--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Moderno</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
