--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,23 @@
     <title>Moderno</title>
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
-    <link rel="icon" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" type="image/png">
-    <link rel="icon" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" type="image/png">
-    <link rel="icon" sizes="48x48" href="assets/images/favicons/favicon-48x48.png" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="assets/images/favicons/apple-touch-icon-precomposed.png">
-    <link rel="apple-touch-icon" href="assets/images/favicons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicons/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicons/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicons/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicons/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicons/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="167x167" href="assets/images/favicons/apple-touch-icon-167x167.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon-180x180.png">
-    <link rel="apple-touch-icon" sizes="1024x1024" href="assets/images/favicons/apple-touch-icon-1024x1024.png">
+    <link type="image/x-icon" href="assets/images/favicons/favicon.ico" rel="shortcut icon">
+    <link type="image/png" href="assets/images/favicons/favicon-16x16.png" rel="icon" sizes="16x16">
+    <link type="image/png" href="assets/images/favicons/favicon-32x32.png" rel="icon" sizes="32x32">
+    <link type="image/png" href="assets/images/favicons/favicon-48x48.png" rel="icon" sizes="48x48">
+    <link href="assets/images/favicons/apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed">
+    <link href="assets/images/favicons/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/images/favicons/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
+    <link href="assets/images/favicons/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
+    <link href="assets/images/favicons/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+    <link href="assets/images/favicons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+    <link href="assets/images/favicons/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+    <link href="assets/images/favicons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+    <link href="assets/images/favicons/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+    <link href="assets/images/favicons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+    <link href="assets/images/favicons/apple-touch-icon-167x167.png" rel="apple-touch-icon" sizes="167x167">
+    <link href="assets/images/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="assets/images/favicons/apple-touch-icon-1024x1024.png" rel="apple-touch-icon" sizes="1024x1024">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5999b02fb1.js" crossorigin="anonymous"></script>
@@ -31,18 +31,54 @@
     <!-- Google Fonts -->
 
     <!-- CSS-стили -->
-    <link rel="stylesheet" href="assets/style.min.css">
+    <link href="assets/style.min.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Header -->
     <header class="header">
-        Header
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__logo">
+                        <a class="header__logo-link" href="#">
+                            <img class="header__logo-img" src="/src/images/logo.png" alt="logo">
+                        </a>
+                    </div>
+                </div>
+                <div class="header__help">
+                    <a class="header__help-link" href="#">Need help?</a>
+                     Talk to an expert: 
+                    <a class="header__help-phone" href="tel:61383766284">+61 3 8376 6284</a>
+                </div>
+                <div class="header__user">
+                    <a class="header__user-basket" href="#"></a>
+                    <a class="header__user-btn" href="#">Login</a>
+                    <a class="header__user-btn" href="#">Register</a>
+                </div>
+            </div>
+        </div>
+        <nav class="header__nav">
+            <div class="container">
+                <ul class="header__menu">
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">Home</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">About</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">WordPress</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">Joomla</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">PSD</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">Plugins</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">Components</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">Pages</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">Contact</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link" href="#">Help</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <!-- Footer -->
     <footer class="footer">
-        Footer
+        
     </footer>
 
     <script src="assets/script.min.js"></script>
