--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,6 @@
     <link href="assets/images/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
     <link href="assets/images/favicons/apple-touch-icon-1024x1024.png" rel="apple-touch-icon" sizes="1024x1024">
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/5999b02fb1.js" crossorigin="anonymous"></script>
-
-    <!-- Google Fonts -->
-
     <!-- CSS-стили -->
     <link href="assets/style.min.css" rel="stylesheet">
 </head>
@@ -45,17 +40,17 @@
                             <img class="header__logo-img" src="/src/images/logo.png" alt="logo">
                         </a>
                     </div>
-                </div>
-                <div class="header__help">
-                    <a class="header__help-link" href="#">Need help?</a>
-                     Talk to an expert: 
-                    <a class="header__help-phone" href="tel:61383766284">+61 3 8376 6284</a>
-                </div>
-                <div class="header__user">
-                    <a class="header__user-basket" href="#"></a>
-                    <a class="header__user-btn" href="#">Login</a>
-                    <a class="header__user-btn" href="#">Register</a>
-                </div>
+                    <div class="header__help">
+                        <a class="header__help-link" href="#">Need help?</a>
+                         Talk to an expert: 
+                        <a class="header__help-phone" href="tel:61383766284">+61 3 8376 6284</a>
+                    </div>
+                    <div class="header__user">
+                        <a class="header__user-basket" href="#"></a>
+                        <a class="header__user-btn header__user-btn--log" href="#">Login</a>
+                        <a class="header__user-btn header__user-btn--reg" href="#">Register</a>
+                    </div>
+                </div>                
             </div>
         </div>
         <nav class="header__nav">
