add section search

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,20 @@
         </nav>
     </header>
 
+    <!-- Search -->
+    <section class="search" style="background-image: url('/src/images/search-bg.jpg')">
+        <div class="container">
+            <h1 class="search__title">Welcome To Foxtar Market Place!</h1>
+            <p class="search__text">Premium WordPress Themes, Web Templates and Many More ...</p>
+            <form action="" class="search__form">
+                <input class="search__form-field" type="text" placeholder="Search Your Keywords . . .">
+                <button class="search__form-btn" type="submit">
+                    <img src="/src/images/icons/search.png" alt="search" class="search__form-icon">
+                </button>
+            </form>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
         
