--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="header__help">
                         <a class="header__help-link" href="#">Need help?</a>
-                         Talk to an expert: 
+                        Talk to an expert:
                         <a class="header__help-phone" href="tel:61383766284">+61 3 8376 6284</a>
                     </div>
                     <div class="header__user">
@@ -50,7 +50,7 @@
                         <a class="header__user-btn header__user-btn--log" href="#">Login</a>
                         <a class="header__user-btn header__user-btn--reg" href="#">Register</a>
                     </div>
-                </div>                
+                </div>
             </div>
         </div>
         <nav class="header__nav">
@@ -72,22 +72,179 @@
     </header>
 
     <!-- Search -->
-    <section class="search" style="background-image: url('/src/images/search-bg.jpg')">
+    <section class="search" style="background-image: url('/src/images/search-bg.jpg');">
         <div class="container">
             <h1 class="search__title">Welcome To Foxtar Market Place!</h1>
             <p class="search__text">Premium WordPress Themes, Web Templates and Many More ...</p>
-            <form action="" class="search__form">
+            <form class="search__form" action>
                 <input class="search__form-field" type="text" placeholder="Search Your Keywords . . .">
                 <button class="search__form-btn" type="submit">
-                    <img src="/src/images/icons/search.png" alt="search" class="search__form-icon">
+                    <img class="search__form-icon" src="/src/images/icons/search.png" alt="search">
                 </button>
             </form>
         </div>
     </section>
 
+    <!-- Products -->
+    <section class="products">
+        <div class="container-fluid">
+            <h2 class="products__title title">Let’s Check Out Our Newest Release Prodcuts</h2>
+            <div class="products__categories">
+                <button class="products__categories-btn" type="button" data-filter="all">All</button>
+                <button class="products__categories-btn" type="button" data-filter=".category-wordpress">WordPress</button>
+                <button class="products__categories-btn" type="button" data-filter=".category-joomla">Joomla</button>
+                <button class="products__categories-btn" type="button" data-filter=".category-plugins">Plugins</button>
+                <button class="products__categories-btn" type="button" data-filter=".category-component">Component</button>
+                <button class="products__categories-btn" type="button" data-filter=".category-psd">PSD</button>
+            </div>
+            <div class="products__cards">
+                <div class="products__card card mix category-wordpress category-new">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-1.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Responsive Mobile APP</a>
+                            <a class="card__title-category" href="#">Site Template</a>
+                        </div>
+                        <div class="card__price">$19</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Radiustheme
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+                <div class="products__card card mix category-plugins category-popular">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-2.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">The Post Grid Pro</a>
+                            <a class="card__title-category" href="#">WordPress Plugin</a>
+                        </div>
+                        <div class="card__price">$15</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            PsdBosS
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+                <div class="products__card card mix category-plugins category-new">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-3.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Food Menu</a>
+                            <a class="card__title-category" href="#">WordPress Plugin</a>
+                        </div>
+                        <div class="card__price">$20</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Manilip
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+                <div class="products__card card mix category-psd category-new">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-4.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Imac Mockup</a>
+                            <a class="card__title-category" href="#">Psd Template</a>
+                        </div>
+                        <div class="card__price">$12</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Lolypop
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+                <div class="products__card card mix category-joomla category-popular">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-5.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Gymedge</a>
+                            <a class="card__title-category" href="#">Joomla Template</a>
+                        </div>
+                        <div class="card__price">$45</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Micrsof
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+                <div class="products__card card mix category-plugins category-new">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-6.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">The Post Grid Pro</a>
+                            <a class="card__title-category" href="#">WordPress Plugin</a>
+                        </div>
+                        <div class="card__price">$19</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Raklouse
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+                <div class="products__card card mix category-component category-popular">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-7.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Doll Face</a>
+                            <a class="card__title-category" href="#">Illsatration</a>
+                        </div>
+                        <div class="card__price">$10</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Mikc Art
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+                <div class="products__card card mix category-psd category-popular">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/product-8.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Designer Mockup</a>
+                            <a class="card__title-category" href="#">PsdTemplate</a>
+                        </div>
+                        <div class="card__price">$10</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            ThemeLol
+                        </a>
+                        <div class="card__rating">(05)</div>
+                    </div>
+                </div>
+            </div>
+            <div class="products__bottom">
+                <button class="products__bottom-btn" type="button" data-filter=".category-new">All New Items</button>
+                <button class="products__bottom-btn" type="button" data-filter=".category-popular">Popular Items</button>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
-        
+
     </footer>
 
     <script src="assets/script.min.js"></script>
