--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,9 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             Radiustheme
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
                 <div class="products__card card mix category-plugins category-popular">
@@ -129,7 +131,9 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             PsdBosS
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
                 <div class="products__card card mix category-plugins category-new">
@@ -146,7 +150,9 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             Manilip
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
                 <div class="products__card card mix category-psd category-new">
@@ -163,7 +169,9 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             Lolypop
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
                 <div class="products__card card mix category-joomla category-popular">
@@ -180,7 +188,9 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             Micrsof
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
                 <div class="products__card card mix category-plugins category-new">
@@ -197,7 +207,9 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             Raklouse
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
                 <div class="products__card card mix category-component category-popular">
@@ -214,7 +226,9 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             Mikc Art
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
                 <div class="products__card card mix category-psd category-popular">
@@ -231,13 +245,176 @@
                             <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
                             ThemeLol
                         </a>
-                        <div class="card__rating">(05)</div>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="products__bottom">
                 <button class="products__bottom-btn" type="button" data-filter=".category-new">All New Items</button>
                 <button class="products__bottom-btn" type="button" data-filter=".category-popular">Popular Items</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Trands -->
+    <section class="trends">
+        <div class="container-fluid">
+            <h2 class="trends__title title">This Week Trending Products</h2>
+            <div class="trends__slider">
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-1.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Responsive Template</a>
+                            <a class="card__title-category" href="#">Site Template</a>
+                        </div>
+                        <div class="card__price">$19</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Radiustheme
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-2.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">The Post Grid Pro</a>
+                            <a class="card__title-category" href="#">WordPress Plugin</a>
+                        </div>
+                        <div class="card__price">$15</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            PsdBosS
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-3.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Logo Showcae</a>
+                            <a class="card__title-category" href="#">Joomla Cmponent</a>
+                        </div>
+                        <div class="card__price">$20</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Manilip
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-4.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">UI Design</a>
+                            <a class="card__title-category" href="#">Psd Template</a>
+                        </div>
+                        <div class="card__price">$12</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Lolypop
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-1.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Responsive Template</a>
+                            <a class="card__title-category" href="#">Site Template</a>
+                        </div>
+                        <div class="card__price">$19</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Radiustheme
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-2.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">The Post Grid Pro</a>
+                            <a class="card__title-category" href="#">WordPress Plugin</a>
+                        </div>
+                        <div class="card__price">$15</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            PsdBosS
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-3.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">Logo Showcae</a>
+                            <a class="card__title-category" href="#">Joomla Cmponent</a>
+                        </div>
+                        <div class="card__price">$20</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Manilip
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
+                <div class="trends__slider-item card">
+                    <a class="card__img" href="#" style="background-image: url('/src/images/content/trend-4.jpg');"></a>                    
+                    <div class="card__inner">
+                        <div class="card__title">
+                            <a class="card__title-name" href="#">UI Design</a>
+                            <a class="card__title-category" href="#">Psd Template</a>
+                        </div>
+                        <div class="card__price">$12</div>
+                    </div>
+                    <div class="card__info">
+                        <a class="card__author" href="#">
+                            <span class="card__author-avatar" style="background-image: url('/src/images/content/avatar.jpg');"></span>
+                            Lolypop
+                        </a>
+                        <div class="card__rating">
+                            <div class="card__rating-stars"></div>(<span class="card__rating-number">05</span>)
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
