add section advantages

--- a/src/index.html
+++ b/src/index.html
@@ -419,6 +419,42 @@
         </div>
     </section>
 
+    <!-- Advantages -->
+    <section class="advantages">
+        <div class="container">
+            <h2 class="advantages__title title">Why You Choose Foxtar Market Place?</h2>
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <div class="advantages__item-img">
+                        <img src="/src/images/icons/lock.png" alt="icon" class="advantages__item-icon">
+                    </div>
+                    <div class="advantages__item-title">Easily Buy & Sell</div>
+                    <div class="advantages__item-descr">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item-img advantages__item-img--center">
+                        <img src="/src/images/icons/gift.png" alt="icon" class="advantages__item-icon">
+                    </div>
+                    <div class="advantages__item-title advantages__item-title--center">Quality Products</div>
+                    <div class="advantages__item-descr">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item-img">
+                        <img src="/src/images/icons/heart.png" alt="icon" class="advantages__item-icon advantages__item-icon--heart">
+                    </div>
+                    <div class="advantages__item-title">100% Secure Payment</div>
+                    <div class="advantages__item-descr">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer">
 
