--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,10 @@
     <link href="assets/images/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
     <link href="assets/images/favicons/apple-touch-icon-1024x1024.png" rel="apple-touch-icon" sizes="1024x1024">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/5999b02fb1.js" crossorigin="anonymous"></script>
+
+
     <!-- CSS-стили -->
     <link href="assets/style.min.css" rel="stylesheet">
 </head>
@@ -486,7 +490,58 @@
 
     <!-- Footer -->
     <footer class="footer">
-
+        <div class="footer__content">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="footer__col">
+                        <h4 class="footer__title">About Company</h4>
+                        <p class="footer__text">
+                            Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna iat.Praesent vel rutrum purus. 
+                        </p>
+                        <div class="footer__contact">PO Box 16122 Collins Street West<br>Victoria 8007 Australia</div>
+                        <a class="footer__contact" href="tel:61383766284">+61 3 8376 6284</a>
+                    </div>
+                    <div class="footer__col">
+                        <h4 class="footer__title">Join Our Community</h4>
+                        <ul class="footer__list">
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Home</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Forums</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Become an Author</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Community Meetups</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Become an Affiliate</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col">
+                        <h4 class="footer__title">Need Help?</h4>
+                        <ul class="footer__list">
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Help Center</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Foxtar Market Terms</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Author Terms</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Foxtar Licenses</a></li>
+                            <li class="footer__list-item"><a class="footer__list-link" href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer__col">
+                        <h4 class="footer__title">Follow Us On</h4>
+                        <ul class="footer__social">
+                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
+                        </ul>
+                        <form class="footer__form" action>
+                            <p class="footer__form-title">Newsletter Sign Up!</p>
+                            <input class="footer__form-field" name="email" type="email" placeholder="E-mail Address">
+                            <button class="footer__form-btn" type="submit"></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copy">
+            © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.
+        </div>
     </footer>
 
     <script src="assets/script.min.js"></script>
