--- a/src/index.html
+++ b/src/index.html
@@ -499,7 +499,7 @@
                             Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna iat.Praesent vel rutrum purus. 
                         </p>
                         <div class="footer__contact">PO Box 16122 Collins Street West<br>Victoria 8007 Australia</div>
-                        <a class="footer__contact" href="tel:61383766284">+61 3 8376 6284</a>
+                        <a class="footer__contact footer__contact--phone" href="tel:61383766284">+61 3 8376 6284</a>
                     </div>
                     <div class="footer__col">
                         <h4 class="footer__title">Join Our Community</h4>
@@ -524,11 +524,11 @@
                     <div class="footer__col">
                         <h4 class="footer__title">Follow Us On</h4>
                         <ul class="footer__social">
-                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
-                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
-                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
-                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
-                            <li class="footer__social-item"><a class="footer__social-link" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link footer__social-link--facebook" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link footer__social-link--twitter" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link footer__social-link--youtube" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link footer__social-link--pinterest" href="#"></a></li>
+                            <li class="footer__social-item"><a class="footer__social-link footer__social-link--linkedin" href="#"></a></li>
                         </ul>
                         <form class="footer__form" action>
                             <p class="footer__form-title">Newsletter Sign Up!</p>
